--- a/nbb_server/Cargo.toml
+++ b/nbb_server/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1.15", features = ["full"] }
 hyper = "0.14"
 tokio-stream = { version = "0.1", features = ["net"] }
 tower-http = { version = "0.2", features = ["fs", "trace"] }
+mime_guess = "2.0"
