--- a/nbb_markdown/Cargo.toml
+++ b/nbb_markdown/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 nbb_config = { path = "../nbb_config" }
 
+tracing = "0.1"
 dashmap = "5.0"
 comrak = "0.12"
 tokio = { version = "1.15", features = ["full"] }
