--- a/.github/workflows/docker-aarch64.yml
+++ b/.github/workflows/docker-aarch64.yml
@@ -34,7 +34,7 @@ jobs:
                 uses: docker/build-push-action@v2
                 with:
                     context: .
-                    file: ./Dockerfile.arm
+                    file: ./Dockerfile.aarch64
                     platforms: linux/arm64
                     push: true
                     tags: tazz4843/nbb:aarch64
