--- a/nbb_server/Cargo.toml
+++ b/nbb_server/Cargo.toml
@@ -12,9 +12,11 @@ nbb_renderer = { path = "../nbb_renderer" }
 nbb_consts = { path = "../nbb_consts" }
 
 tracing = "0.1"
-axum = "0.6"
+axum = "0.7"
 tokio = { version = "1.37", features = ["full"] }
-hyper = "0.14"
+hyper = { version = "1" }
 tokio-stream = { version = "0.1", features = ["net"] }
-tower-http = { version = "0.3", features = ["fs", "trace"] }
+tower-http = { version = "0.5", features = ["fs", "trace"] }
 mime_guess = "2.0"
+hyper-util = { version = "0.1.3", features = ["tokio"] }
+tower = "0.4.13"
